@@ -13,6 +13,7 @@ git-annex (5.20140222) UNRELEASED; urgency=medium
     metadata (year and month) when adding files.
   * metadata: Field names limited to alphanumerics and a few whitelisted
     punctuation characters to avoid issues with views, etc.
+  * metadata: Support --json
 
  -- Joey Hess <joeyh@debian.org>  Fri, 21 Feb 2014 13:03:04 -0400
 
